feat: enhance uv library with workspace support and improve ry-lib hooks
- Add strict fail-early checks to uv build/publish commands
- Support native --package flags for uv workspace operations
- Replace install-hooks with --hook-snippet pattern in ry-lib
- Add [Unreleased] sections to all library CHANGELOGs
- Fix Unicode symbols (arrows) for better terminal compatibility
- Bump versions: ry-lib 0.2.0->0.2.1, uv 0.1.0->0.1.1

--- a/docs/libraries/ry-lib/meta.yaml
+++ b/docs/libraries/ry-lib/meta.yaml
@@ -1,6 +1,6 @@
 name: ry-lib
-description: "Library version management for ry"
+description: Library version management for ry
 author: Fredrik Angelsen
-version: "0.2.0"
+version: 0.2.1
 dependencies:
-  changelog: ">=0.1.0"
+  changelog: '>=0.1.0'
