--- a/docs/libraries/uv/meta.yaml
+++ b/docs/libraries/uv/meta.yaml
@@ -1,26 +1,25 @@
-# meta.yaml - Library metadata
 name: uv
-version: 0.1.0
+version: 0.1.1
 description: Enhanced uv operations with git integration
 author: Fredrik Angelsen
 dependencies:
-  changelog: ">=0.1.0"
-
+  changelog: '>=0.1.0'
 features:
-  - Automatic changelog updates on version bump
-  - Atomic git operations (commit + tag, but not push)
-  - Lockfile synchronization  
-  - Clean git state validation
-
+- Automatic changelog updates on version bump
+- Atomic git operations (commit + tag, but not push)
+- Lockfile synchronization
+- Clean git state validation
 commands:
-  - version --bump
-  - publish
-  - build
+- version --bump
+- publish
+- build
+usage: '# Enhanced version bumping
 
-usage: |
-  # Enhanced version bumping
   uv version --bump minor
-  
+
+
   # Regular uv commands pass through
+
   uv add requests
-  uv sync
+
+  uv sync'
